fixed issue with alignments

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -104,12 +104,13 @@
 
 	#title-card{
 		width: 90%;
-		justify-self: center !important;
+		/* justify-self: center !important; */
 		margin-left: 0;
 		margin-right: 0;
 		margin-bottom: 2.5em !important ;
+		position: relative;
 		left: 50%;
-		transform: translateX (-50%);
+		transform: translateX(-50%);
 		
 	}
 
